--- a/createRegionalModelMineProjectMF6/scripts/wk_reg_p4_vtkGeneration.ipynb
+++ b/createRegionalModelMineProjectMF6/scripts/wk_reg_p4_vtkGeneration.ipynb
@@ -5,18 +5,7 @@
    "execution_count": 1,
    "id": "f3b99756",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\saulm\\anaconda3\\Lib\\site-packages\\pyvista\\examples\\downloads.py:93: DeprecationWarning: support for supplying keyword arguments to pathlib.PurePath is deprecated and scheduled for removal in Python 3.14\n",
-      "  Path(USER_DATA_PATH, exist_ok=True).mkdir()\n",
-      "c:\\Users\\saulm\\anaconda3\\Lib\\site-packages\\pyvista\\examples\\downloads.py:98: UserWarning: Unable to access C:\\Users\\saulm\\AppData\\Local\\pyvista_3\\pyvista_3\\Cache. Manually specify the PyVistaexamples cache with the PYVISTA_USERDATA_PATH environment variable.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Vtk generation\n",
     "import flopy ## Org\n",
@@ -92,7 +81,7 @@
        "    <div>\n",
        "    <a href=\"https://hatarilabs.com\" target=\"_blank\">\n",
        "            <img src=\"https://olivosbellaterra.com/static/img/png/hatarilabs.png\" alt=\"Hatarilabs\" width=\"200\" height=\"200\"></a> \n",
-       "            <p class=\"styled-text\">build faster, analyze more</p>\n",
+       "            <p class=\"styled-text\">mf6Voronoi will have a web version in 2028</p>\n",
        "    </div>\n",
        "\n",
        "    <table border=\"0px\">\n",
@@ -191,7 +180,7 @@
     {
      "data": {
       "text/plain": [
-       "[(0, 0)]"
+       "[(np.int32(0), np.int32(0))]"
       ]
      },
      "execution_count": 6,
@@ -248,19 +237,19 @@
       "\n",
       "/--------RCHA_0 vtk generation-------/\n",
       "Working for RCHA_0 package, creating the datasets: dict_keys(['irch', 'recharge', 'aux'])\n",
-      "Vtk file took 0.0721 seconds to be generated.\n",
+      "Vtk file took 0.3073 seconds to be generated.\n",
       "/--------RCHA_0 vtk generated-------/\n",
       "\n",
       "\n",
       "/--------EVTA_0 vtk generation-------/\n",
       "Working for EVTA_0 package, creating the datasets: dict_keys(['ievt', 'surface', 'rate', 'depth', 'aux'])\n",
-      "Vtk file took 0.0522 seconds to be generated.\n",
+      "Vtk file took 0.2490 seconds to be generated.\n",
       "/--------EVTA_0 vtk generated-------/\n",
       "\n",
       "\n",
       "/--------DRN_0 vtk generation-------/\n",
       "Working for DRN_0 package, creating the datasets: ('elev', 'cond')\n",
-      "Vtk file took 1.1235 seconds to be generated.\n",
+      "Vtk file took 3.5631 seconds to be generated.\n",
       "/--------DRN_0 vtk generated-------/\n",
       "\n"
      ]
@@ -316,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
